src/nodejs/test/message/vm_display_syntax_error.out
beginning

test.vm:1
var 5;
    ^
SyntaxError: Unexpected number
    at Object.exports.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_display_syntax_error.js:*)
    at package._compile (package.js:*)
    at Object.package._extensions..js (package.js:*)
    at package.load (package.js:*)
    at Function.package._load (package.js:*)
    at Function.package.runMain (package.js:*)
    at startup (node.js:*)
    at node.js:*
